# rpi0-rust

./: .gitignore  Cargo.toml  armv6zk-none-eabihf.json  justfile  link.x  lookup.py  note.md  rust-toolchain
.cargo/: config.toml
.helix/: languages.toml
app/: Cargo.toml  armv6zk-none-eabihf.json
app/src/: allocator.rs  main.rs  profile.rs  setup.rs  syscall.rs  thread.rs  uart.rs
app/src/setup/: interrupts.rs
bootloader/: Cargo.toml
bootloader/src/: main.rs
bootloader_shared/: Cargo.toml
bootloader_shared/src/: lib.rs
installer/: Cargo.toml
installer/src/: main.rs  uart.rs
lib/: Cargo.toml
lib/src/: allocator.rs  caches.rs  coprocessor.rs  critical_section.rs  cycle_counter.rs  debug.rs  gpio.rs  interrupts.rs  lib.rs  pin_array.rs  setup.rs  syscall.rs  thread.rs  timer.rs  uart.rs  virtual_memory.rs
pins/: Cargo.toml
pins/src/: lib.rs  pin_array.rs
src/: main.rs  setup.rs  timer.rs  uart.rs
